include python version requirements

--- a/html/index.html
+++ b/html/index.html
@@ -54,7 +54,7 @@
             <p>
                 pykeylogger requires the following dependencies:
                 <ul>
-                    <li> <a href="http://python.org/">python</a>
+                    <li> <a href="http://python.org/">python</a> (only 2.3 and up, due to my using the optparse module)
                     <li> <a href="http://sourceforge.net/projects/uncassist">pyHook</a>
                     <li> <a href="http://starship.python.net/crew/mhammond/win32/Downloads.html">win32all extensions</a>
                 </ul>
