added py2exe optional dependency to the list

--- a/html/index.html
+++ b/html/index.html
@@ -57,6 +57,7 @@
                     <li> <a href="http://python.org/">python</a> (only 2.3 and up, due to my using the optparse module)
                     <li> <a href="http://sourceforge.net/projects/uncassist">pyHook</a>
                     <li> <a href="http://starship.python.net/crew/mhammond/win32/Downloads.html">win32all extensions</a>
+                    <li> <a href="http://starship.python.net/crew/theller/py2exe/">py2exe</a> [<font color="red">Optional: only if you want to freeze your own executable out of source.</font> (0.5.4 and up, if you want to freeze from .pyw file, not .py)] 
                 </ul>
             </p>
             <p>
