added counter from digits.com

--- a/html/index.html
+++ b/html/index.html
@@ -36,6 +36,7 @@
           <p>
             If you think you can trust me, and/or if you are not interested in getting all those packages
             to run the source file, there is also a binary distribution available for windows.
+          </p>
         <a name="download"></a>
         <h2><img class="icon" src="icon.png" alt="icon" />Download</h2>
           <p>
@@ -159,6 +160,8 @@
     <div id="foot">
       <br />
       This page shamelessly ripped off from http://gnome-sudoku.sourceforge.net/ :) <br/>
+      <IMG SRC="http://counter.digits.com/wc/-d/4/pykeylogger" ALIGN="middle" WIDTH=60 HEIGHT=20 BORDER=0 HSPACE=4 VSPACE=2><br />
+      Counter provided by <a href="http://www.digits.com/">digits.com</a>
     </div>
   </body>
 </html>
