changed some layout, added future features section, and overall purpose.

--- a/html/index.html
+++ b/html/index.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    <title>PyKeylogger</title>
+    <title>PyKeylogger - The Universal Backup Solution</title>
     <link rel="stylesheet" type="text/css" href="stylesheet.css"/>
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
     <meta name="robots" content="index,follow" />
   </head>
   <body>
 
-        <div style="display: block; clear: both"> </div>
     <div id="main">
       <div id="rightmenu">
         <a href="http://sourceforge.net"><img src="http://sourceforge.net/sflogo.php?group_id=147501&amp;type=2" width="125" height="37" border="0" alt="SourceForge.net Logo" /></a>
         <br>
         <ul>
-          <li id="activemenu"> <a href="#intro">PyKeylogger</a></li>
+          <li><a href="#intro">PyKeylogger</a></li>
           <li><a href="#download">Download</a></li>
           <li><a href="#instructions">Instructions</a></li>
-          <li><a href="#questions">Any questions?<a/><br></li>
+          <li><a href="#future">Future Direction</a></li>
+          <li><a href="#questions">Any questions?</a></li>
+          <li>&nbsp;</li>
+          <li><a href="http://sourceforge.net/projects/pykeylogger">SF Summary Page</a></li>
+          <li><a href="http://sourceforge.net/project/showfiles.php?group_id=147501">SF Download Page</a></li>
         </ul>
       </div>
       <div id="content">
@@ -27,6 +30,13 @@
             PyKeylogger is a simple keylogger written in the python programming language.
             I threw it together one day after not being able to find a simple and trustworthy
             (as in, source available) keylogger for windows. 
+          </p>
+          <p>
+            My goal is to create a universal backup solution for everything you type. We have all
+            at one time or another accidentally closed that word or notepad file without saving. We have
+            all lost form data on the web after it failed to submit properly. Not even mentioning the
+            everpresent threat of computer crash. PyKeylogger logs everything you 
+            type, so you can recover your text of anything you type in any application.
           </p>
           <p>
             Since PyKeylogger is available as a simple python source file, there are no trust issues
@@ -41,7 +51,7 @@
         <h2><img class="icon" src="icon.png" alt="icon" />Download</h2>
           <p>
             You can download PyKeylogger from <a
-            href="https://sourceforge.net/project/showfiles.php?group_id=147501">the
+            href="http://sourceforge.net/project/showfiles.php?group_id=147501">the
             SourceForge download page</a>. 
           </p>
         <a name="instructions"></a>
@@ -78,7 +88,8 @@
             <p>
                 Since the file's extension is ".pyw", it runs without a console window in the background,
                 if you just double-click the file. If you want to see the console (to see error output, e.g.),
-                just rename the file with ".py" extension, or run it from command line with "python keylogger.pyw" command.
+                just rename the file with ".py" extension, or run it from command line with 
+                <pre class="code">python keylogger.pyw</pre> 
             </p>
 
             <h4>Controlling pykeylogger:</h4>
@@ -135,6 +146,27 @@
                 so you will have to make a copy of the logfile and open the copy with wordpad, rather than open the logfile directly.
             </p>
 
+        <a name="future"></a>
+        <h2><img class="icon" src="icon.png" alt="icon" /> Future direction [Features planned]</h2>
+          <p>
+            Currently, the log file just has everything dumped into it as keyboard input is received.
+            This means that when you type something in say, notepad, then alt-tab into word, then write an email,
+            then come back to notepad, the log file has all that input mixed in, so while it is not lost, it is hard
+            to retrieve in "original condition". 
+          </p>
+          <p>
+            I plan to enhance the logging capability so that it splits the keyboard input by window, and then create 
+            a log viewer, where you can search by date, application name, and window title. So that you can, for example,
+            say "show me what I typed in all notepad windows yesterday", or "show me what I typed in word document titled 'some stuff'".
+          </p>
+          <p>
+            Another feature I plan for the log viewer is to have an option to parse the backspaces and arrow keys to recreate 
+            the final output, rather than have a bunch of [Backspace] and [LeftArrow] text in the log. Of course, if you want that
+            to be particularly useful, you have to try to refrain from using the mouse to reposition your cursor :).
+          <p>
+            Any other ideas, or contributions to the code, are highly welcomed.
+          </p>
+
         <a name="questions"></a>
         <h2><img class="icon" src="icon.png" alt="icon" /> Where can I ask more questions?</h2>
           <p>
@@ -147,7 +179,8 @@
         <h4>How can I help out?</h4>
           <p>
             If you're a programmer, please feel free to hack around in PyKeylogger code,
-            to add features, or anything else you would like.
+            to add features, or anything else you would like. Get the latest src package, or just pull 
+            the latest release (or, if you are feeling daring, HEAD) from CVS.
           </p>
           <p>
             If you're not a programmer, you could file bug reports or feature requests.
@@ -155,6 +188,9 @@
           <p>
             Any contributions will be gladly accepted as patches at sourceforge.
           </p>
+        
+
+          
       <span id='time'>Last changed: Sep 5 2005 14:27</span>
     </div>
     <div id="foot">
