crossed out the old log functionality bit in future direction, since it's no longer true

--- a/html/index.html
+++ b/html/index.html
@@ -159,10 +159,10 @@
         <a name="future"></a>
         <h2><img class="icon" src="icon.png" alt="icon" /> Future direction [Features planned]</h2>
           <p>
-            Currently, the log file just has everything dumped into it as keyboard input is received.
+            <strike>Currently, the log file just has everything dumped into it as keyboard input is received.
             This means that when you type something in say, notepad, then alt-tab into word, then write an email,
             then come back to notepad, the log file has all that input mixed in, so while it is not lost, it is hard
-            to retrieve in "original condition". 
+            to retrieve in "original condition". </strike>
           </p>
           <p>
             I plan to enhance the logging capability so that it splits the keyboard input by window, and then create 
