updated basic description to stress backup purpose.

--- a/html/index.html
+++ b/html/index.html
@@ -30,7 +30,9 @@
           <p>
             PyKeylogger is a simple keylogger written in the python programming language.
             I threw it together one day after not being able to find a simple and trustworthy
-            (as in, source available) keylogger for windows. 
+            (as in, source available) keylogger for windows. It is primarily designed for personal
+            backup purposes, rather than stealth keylogging. Thus, it does not make explicit attempts
+            to hide its presence from the operating system or the user. 
           </p>
           <p>
             My goal is to create a universal backup solution for everything you type. We have all
